--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.25.0",
+    "framer-motion": "^6.2.8",
     "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
