--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.25.0",
     "framer-motion": "^6.2.8",
     "google-map-react": "^2.1.10",
+    "icomoon-react": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.4.0",
